[tool.poetry]
name = "ocftw-ooni-research-asn-coverage"
version = "0.1.0"
description = ""
authors = ["Toomore Chiang (ocf.tw) <toomore@ocf.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
boto3 = "^1.29.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
virtual_env = "./.venv"