[project]
name = "ocftw-ooni-research-asn-coverage"
version = "0.1.0"
description = "About Tor, Tails, OONI data research in Taiwan"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "boto3>=1.37.36",
    "click>=8.1.8",
    "orjson>=3.10.16",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "isort>=6.0.1",
]
