[tool.poetry]
name = "ocf-ooni-research-docs"
version = "2024.12.31"
description = "About OONI Probe and ASNs finding in Taiwan."
authors = ["Toomore Chiang <toomore@ocf.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = {extras = ["imaging"], version = "^9.5.49"}
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-rss-plugin = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
