[project]
name = "ocf-ooni-research-docs"
version = "2024.12.31"
description = "About OONI Probe and ASNs finding in Taiwan."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-charts-plugin>=0.0.12",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-material[imaging]>=9.6.12",
    "mkdocs-rss-plugin>=1.17.1",
]

[dependency-groups]
dev = [
    "awscli>=1.38.36",
]
