[project]
name = "pulse-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Toomore Chiang"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
isort = "^6.0.1"

[tool.isort]
virtual_env = "./.venv"
