[project]
name = "pulse-backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "click>=8.1.8",
    "fastapi[standard]>=0.115.12",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "isort>=6.0.1",
]
